# GCAM

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  gcam.c
libgcode/: Makefile.am  Makefile.in  gcode.c  gcode.h  gcode_arc.c  gcode_arc.h  gcode_begin.c  gcode_begin.h  gcode_bolt_holes.c  gcode_bolt_holes.h  gcode_code.c  gcode_code.h  gcode_drill_holes.c  gcode_drill_holes.h  gcode_end.c  gcode_end.h  gcode_excellon.c  gcode_excellon.h  gcode_extrusion.c  gcode_extrusion.h  gcode_gerber.c  gcode_gerber.h  gcode_image.c  gcode_image.h  gcode_internal.c  gcode_internal.h  gcode_line.c  gcode_line.h  gcode_math.c  gcode_math.h  gcode_pocket.c  gcode_pocket.h  gcode_point.c  gcode_point.h  gcode_sim.c  gcode_sim.h  gcode_sketch.c  gcode_sketch.h  gcode_stl.c  gcode_stl.h  (+8 more)
libgui/: Makefile.am  Makefile.in  gcam_icon.h  gui.c  gui.h  gui_define.h  gui_endmills.c  gui_endmills.h  gui_machines.c  gui_machines.h  gui_menu.c  gui_menu.h  gui_menu_assistant.c  gui_menu_assistant.h  gui_menu_edit.c  gui_menu_edit.h  gui_menu_file.c  gui_menu_file.h  gui_menu_help.c  gui_menu_help.h  gui_menu_insert.c  gui_menu_insert.h  gui_menu_util.c  gui_menu_util.h  gui_menu_view.c  gui_menu_view.h  gui_opengl.c  gui_opengl.h  gui_settings.c  gui_settings.h  gui_tab.c  gui_tab.h
samples/: Makefile.am  Makefile.in  board_drill.cnc  board_layout.gbr  continuity.gcam  fish.gcam  hub.gcam  image.gcam  motor_mount.gcam  pattern.gcam  test.gcam
share/: Makefile.am  Makefile.in  endmills.xml  machines.xml  settings.xml
