########################################################################
#  Makefile.am
#  Source code file for G-Code generation, simulation, and visualization
#  library. This software is Copyright (C) 2006 by Justin Shumaker
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
########################################################################
gcamfilesdir = $(pkgdatadir)/samples
dist_gcamfiles_DATA = \
	board_layout.gbr \
	board_drill.cnc \
	continuity.gcam \
	fish.gcam \
	hub.gcam \
	motor_mount.gcam \
	pattern.gcam \
	test.gcam \
	end_mill_shell.png \
	image.gcam
